Resized body to avoid bottom scrollbar

--- a/style/index.css
+++ b/style/index.css
@@ -34,7 +34,7 @@ body{
     background-color:#c4c2e2;
     color: #433740;
     text-transform: capitalize;
-    width: auto;
+    width: 98vw;
 }
 a{
     text-decoration: none;
